# AO-SDL

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: ci.yml  docs.yml
apps/flutter/: .clang-tidy  README.md  pubspec.yaml
apps/flutter/android/app/: build.gradle.kts
apps/flutter/ios/: Podfile  ao_bridge.podspec  ao_native.xcconfig
apps/flutter/ios/Flutter/: Debug.xcconfig  Release.xcconfig
apps/flutter/ios/Runner/: AoTexturePlugin.h  AoTexturePlugin.mm  AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
apps/flutter/ios/Runner.xcodeproj/: project.pbxproj
apps/flutter/lib/: engine_state.dart  main.dart
apps/flutter/lib/bridge/: native_bridge.dart
apps/flutter/lib/screens/: char_select_screen.dart  courtroom_screen.dart  server_list_screen.dart
apps/flutter/native/: CMakeLists.txt  MiniaudioDevice.cpp  MiniaudioDevice.h  apple_httplib.h  apple_httplib.mm  bridge.cpp  bridge.h  miniaudio_device_impl.mm  test_httplib.mm
apps/flutter/scripts/: build_native.sh
apps/flutter/test/: widget_test.dart
apps/kagami/: CMakeLists.txt  CloudWatchSink.h  LokiSink.h  ReplCommand.h  ServerSettings.cpp  ServerSettings.h  TerminalUI.cpp  TerminalUI.h  main.cpp
apps/sdl/: CMakeLists.txt  SDLGameWindow.cpp  main.cpp
apps/sdl/audio/: SDLAudioDevice.cpp  SDLAudioDevice.h
apps/sdl/render/: GLBackend.cpp
apps/sdl/ui/controllers/: CourtroomController.cpp
apps/sdl/ui/widgets/: ICChatWidget.cpp  ICMessageState.h  MessageOptionsWidget.cpp  MusicAreaWidget.cpp  MusicAreaWidget.h
deploy/: .gitignore  Caddyfile  bootstrap.sh  deploy.sh  docker-compose.yml  kagami.example.json
deploy/prometheus/: prometheus.yml
doc/: Architecture.md  asset-pipeline-design.md  protocol-v2-proposal.md
doc/aonx/: build-docs.sh  openapi.yaml
engine/asset/: AssetCache.cpp  AssetLibrary.cpp  MountHttp.cpp  MountManager.cpp  miniaudio_impl.cpp
engine/asset/formats/: ApngDecoder.cpp
engine/audio/: AudioStream.cpp  AudioThread.cpp
engine/event/: ICMessageEvent.cpp
engine/game/: GameRoom.cpp  GameThread.cpp  Session.cpp
engine/net/: EndpointFactory.cpp  Http.cpp  Http2Connection.cpp  HttpPool.cpp  HttpServer.cpp  NetworkThread.cpp  PlatformServerSocket.cpp  PlatformServerSocket.h  PlatformTcpSocket.cpp  PlatformTcpSocket.h  RestRouter.cpp  WSClientThread.cpp  WebSocket.cpp  WebSocket.h  WebSocketCommon.cpp  WebSocketFrame.cpp  WebSocketServer.cpp
engine/render/: RenderState.cpp  TransformAnimator.cpp
engine/utils/: GeneratedSchemasStub.cpp  JsonSchema.cpp  Log.cpp  StringHelpers.cpp
include/asset/: AssetCache.h  AssetLibrary.h  MeshAsset.h  Mount.h  MountHttp.h  MountManager.h
include/audio/: AudioStream.h  AudioThread.h
include/configuration/: IConfiguration.h  JsonConfiguration.h
include/event/: DisconnectRequestEvent.h  EventChannel.h  ICMessageEvent.h  SessionEndEvent.h  SessionStartEvent.h
include/game/: AreaState.h  ClientId.h  GameAction.h  GameRoom.h  GameThread.h  IScenePresenter.h  ServerSession.h  Session.h
include/metrics/: Metrics.h  MetricsRegistry.h  ProcessMetrics.h  PrometheusFormatter.h
include/net/: EndpointFactory.h  EndpointRegistrar.h  Http.h  Http2Connection.h  HttpPool.h  IServerSocket.h  ITcpSocket.h  ProtocolHandler.h  RestEndpoint.h  RestRequest.h  RestResponse.h  RestRouter.h  SSEEvent.h  WSClientThread.h  WebSocketCommon.h  WebSocketFrame.h  WebSocketServer.h
include/platform/: Poll.h  Socket.h
include/render/: RenderState.h  TransformAnimator.h
include/utils/: AwsSigV4.h  Crypto.h  GeneratedSchemas.h  JsonSchema.h  Log.h  PersistentMap.h  StringHelpers.h
platform/linux/: HardwareId.cpp  Poll.cpp  Socket.cpp
platform/macos/: Poll.cpp  Socket.mm
platform/windows/: Poll.cpp  Socket.cpp
plugins/ao/: ao_plugin.h
plugins/ao/asset/: AOAssetLibrary.cpp  AOAssetLibrary.h
plugins/ao/event/: ICMessageEvent.cpp
plugins/ao/game/: AOBackground.cpp  AOCourtroomPresenter.cpp  AOCourtroomPresenter.h  AOEmotePlayer.h  AOMessagePlayer.cpp  AOMessagePlayer.h  AOSceneCompositor.cpp  AOSceneCompositor.h  AOTextBox.cpp  AOTextBox.h  ActiveICState.h  ICMessageQueue.h
plugins/net/ao/: AOClient.cpp  AOPacket.cpp  AOPacket.h  AOServer.cpp  AOServer.h  PacketBehavior.cpp  PacketTypes.cpp  PacketTypes.h  ServerPacketBehavior.cpp
plugins/net/nx/: NXClient.cpp  NXClient.h  NXEndpoint.cpp  NXEndpoint.h  NXMessage.cpp  NXMessage.h  NXServer.cpp  NXServer.h  NXTime.h
plugins/render/gl/: GLRenderer.cpp  GLRenderer.h
plugins/render/metal/: MetalRenderer.mm
scripts/: generate_schemas.py
tests/: CMakeLists.txt
tests/ao/asset/: test_AOAssetLibrary.cpp
tests/ao/event/: test_ICMessageEvent.cpp
tests/ao/game/: test_AOCourtroomPresenter.cpp  test_AOMessagePlayer.cpp  test_AOSceneCompositor.cpp  test_SlideEffect.cpp
tests/ao/net/: test_AOClient.cpp  test_AOServer.cpp  test_NewPackets.cpp
tests/ao/ui/: test_Screens.cpp
tests/asset/: test_AssetCache.cpp  test_AssetLibrary.cpp  test_MountDirectory.cpp  test_MountHttp.cpp  test_MountManager.cpp
tests/configuration/: test_IConfiguration.cpp  test_JsonConfiguration.cpp
tests/event/: test_EventChannel.cpp
tests/game/: test_GameThread.cpp  test_Session.cpp
tests/net/: test_HttpClient.cpp  test_HttpCoverage.cpp  test_HttpServer.cpp  test_NXBroadcast.cpp  test_NXMessage.cpp  test_PlatformSocket.cpp  test_RFC9110.cpp  test_RFC9112.cpp  test_RestRouter.cpp  test_SSE.cpp  test_WSClientThread.cpp  test_WebSocketCommon.cpp  test_WebSocketServer.cpp
tests/platform/: test_Poll.cpp  test_Socket.cpp
tests/render/: test_MeshAsset.cpp
tests/schemas/: test_SchemaGenerator.cpp  test_openapi.yaml
tests/sdl/: ImGuiTestFixture.h  NullGPUBackend.h  StubRenderer.h  test_ChatWidget.cpp  test_CourtroomState.cpp  test_DisconnectModalWidget.cpp  test_EvidenceWidget.cpp  test_HealthBarWidget.cpp  test_MusicAreaWidget.cpp  test_PlayerListWidget.cpp  test_TimerWidget.cpp
tests/utils/: test_Crypto.cpp  test_JsonSchema.cpp  test_Metrics.cpp  test_PersistentMap.cpp  test_StringHelpers.cpp
(+39 files in other folders)
