cmake_minimum_required(VERSION 3.14)
project(aosdl LANGUAGES CXX C)

if(MSVC)
    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /Zi")
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Zi")
endif()

if(WIN32)
    add_compile_definitions(WIN32_LEAN_AND_MEAN NOMINMAX)
endif()

# LTO for Release builds (significantly reduces binary size)
if(CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "MinSizeRel")
    include(CheckIPOSupported)
    check_ipo_supported(RESULT IPO_SUPPORTED)
    if(IPO_SUPPORTED)
        set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
        message(STATUS "LTO enabled")
    endif()
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# =============================================================================
# Third-party dependencies
# =============================================================================

# --- SDL2 — only needed for the desktop SDL app, not for Flutter/mobile ------
if(NOT AO_BUILD_FLUTTER)
    set(SDL_SHARED OFF CACHE BOOL "" FORCE)
    set(SDL_STATIC ON CACHE BOOL "" FORCE)
    set(SDL_JOYSTICK OFF CACHE BOOL "" FORCE)
    set(SDL_HAPTIC OFF CACHE BOOL "" FORCE)
    set(SDL_HIDAPI OFF CACHE BOOL "" FORCE)
    set(SDL_SENSOR OFF CACHE BOOL "" FORCE)
    set(SDL_LOCALE OFF CACHE BOOL "" FORCE)
    set(SDL_DISKAUDIO OFF CACHE BOOL "" FORCE)
    set(SDL_DUMMYAUDIO OFF CACHE BOOL "" FORCE)
    set(SDL_DUMMYVIDEO OFF CACHE BOOL "" FORCE)
    set(SDL_OFFSCREEN OFF CACHE BOOL "" FORCE)
    set(SDL_DIRECTFB OFF CACHE BOOL "" FORCE)
    set(SDL_RPI OFF CACHE BOOL "" FORCE)
    set(SDL_VIVANTE OFF CACHE BOOL "" FORCE)
    set(SDL_VULKAN OFF CACHE BOOL "" FORCE)
    set(SDL_RENDER_D3D OFF CACHE BOOL "" FORCE)
    set(SDL_TEST OFF CACHE BOOL "" FORCE)
    set(SDL_TESTS OFF CACHE BOOL "" FORCE)
    set(SDL2_DISABLE_INSTALL ON CACHE BOOL "" FORCE)
    set(SDL2_DISABLE_UNINSTALL ON CACHE BOOL "" FORCE)
    add_subdirectory(third-party/SDL)
endif()

# --- bit7z — archive extraction only ----------------------------------------
set(BIT7Z_AUTO_FORMAT ON CACHE BOOL "" FORCE)
set(BIT7Z_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(BIT7Z_BUILD_DOCS OFF CACHE BOOL "" FORCE)
add_subdirectory(third-party/bit7z)
# bit7z's OutputOptions.cmake writes its library to third-party/bit7z/lib/arm64/
# using PROJECT_SOURCE_DIR, which means iOS and macOS builds clobber each other.
# Override the target's output directory to go into the build tree instead.
set_target_properties(bit7z64 PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)

# --- libwebp — decode only, no tools or encoding features -------------------
set(WEBP_NEAR_LOSSLESS OFF CACHE BOOL "" FORCE)
set(WEBP_BUILD_ANIM_UTILS OFF CACHE BOOL "" FORCE)
set(WEBP_BUILD_CWEBP OFF CACHE BOOL "" FORCE)
set(WEBP_BUILD_DWEBP OFF CACHE BOOL "" FORCE)
set(WEBP_BUILD_GIF2WEBP OFF CACHE BOOL "" FORCE)
set(WEBP_BUILD_IMG2WEBP OFF CACHE BOOL "" FORCE)
set(WEBP_BUILD_VWEBP OFF CACHE BOOL "" FORCE)
set(WEBP_BUILD_WEBPINFO OFF CACHE BOOL "" FORCE)
set(WEBP_BUILD_LIBWEBPMUX OFF CACHE BOOL "" FORCE)
set(WEBP_BUILD_WEBPMUX OFF CACHE BOOL "" FORCE)
set(WEBP_BUILD_EXTRAS OFF CACHE BOOL "" FORCE)
add_subdirectory(third-party/libwebp)

# --- FreeType — font rasterization only, no optional deps --------------------
set(FT_DISABLE_HARFBUZZ ON CACHE BOOL "" FORCE)
set(FT_DISABLE_BZIP2 ON CACHE BOOL "" FORCE)
set(FT_DISABLE_BROTLI ON CACHE BOOL "" FORCE)
set(FT_DISABLE_PNG ON CACHE BOOL "" FORCE)
set(SKIP_INSTALL_ALL ON CACHE BOOL "" FORCE)
add_subdirectory(third-party/freetype)

# --- Ogg — container library, no extras --------------------------------------
set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
set(INSTALL_DOCS OFF CACHE BOOL "" FORCE)
set(INSTALL_PKG_CONFIG_MODULE OFF CACHE BOOL "" FORCE)
set(INSTALL_CMAKE_PACKAGE_MODULE OFF CACHE BOOL "" FORCE)
add_subdirectory(third-party/ogg)

# --- Opus — codec library, no programs or tests -----------------------------
set(OPUS_BUILD_PROGRAMS OFF CACHE BOOL "" FORCE)
set(OPUS_BUILD_TESTING OFF CACHE BOOL "" FORCE)
set(OPUS_INSTALL_PKG_CONFIG_MODULE OFF CACHE BOOL "" FORCE)
set(OPUS_INSTALL_CMAKE_CONFIG_MODULE OFF CACHE BOOL "" FORCE)
add_subdirectory(third-party/opus)

# Opusfile — built manually since its CMakeLists uses find_package()
# which doesn't work with our source-built ogg/opus.
add_library(opusfile STATIC
    third-party/opusfile/src/info.c
    third-party/opusfile/src/internal.c
    third-party/opusfile/src/opusfile.c
    third-party/opusfile/src/stream.c
)
target_include_directories(opusfile
    PUBLIC third-party/opusfile/include
)
target_link_libraries(opusfile PUBLIC Ogg::ogg Opus::opus)
target_compile_definitions(opusfile PRIVATE OP_DISABLE_HTTP)

# ImGui (static lib — desktop only, not needed for Flutter)
if(NOT AO_BUILD_FLUTTER)
    set(IMGUI_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third-party/imgui)
    set(IMGUI_SOURCES
        ${IMGUI_DIR}/imgui.cpp
        ${IMGUI_DIR}/imgui_draw.cpp
        ${IMGUI_DIR}/imgui_tables.cpp
        ${IMGUI_DIR}/imgui_widgets.cpp
        ${IMGUI_DIR}/backends/imgui_impl_sdl2.cpp
    )

    if(APPLE)
        list(APPEND IMGUI_SOURCES ${IMGUI_DIR}/backends/imgui_impl_metal.mm)
    else()
        find_package(OpenGL REQUIRED)
        list(APPEND IMGUI_SOURCES ${IMGUI_DIR}/backends/imgui_impl_opengl3.cpp)
    endif()

    add_library(imgui STATIC ${IMGUI_SOURCES})
    target_compile_definitions(imgui PUBLIC IMGUI_USE_WCHAR32)
    target_include_directories(imgui PUBLIC
        ${IMGUI_DIR}
        ${IMGUI_DIR}/backends
    )
    target_link_libraries(imgui PRIVATE SDL2::SDL2)

    if(APPLE)
        target_link_libraries(imgui PRIVATE
            "-framework Metal"
            "-framework MetalKit"
            "-framework QuartzCore"
        )
    else()
        target_link_libraries(imgui PRIVATE ${OPENGL_LIBRARIES})
        if(WIN32)
            target_include_directories(imgui PRIVATE third-party/glew/include)
        endif()
    endif()
endif()

# =============================================================================
# Version string from git
# =============================================================================

execute_process(
    COMMAND git rev-parse --short HEAD
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    OUTPUT_VARIABLE GIT_HASH
    OUTPUT_STRIP_TRAILING_WHITESPACE
    ERROR_QUIET
)
execute_process(
    COMMAND git status --porcelain
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    OUTPUT_VARIABLE GIT_STATUS
    OUTPUT_STRIP_TRAILING_WHITESPACE
    ERROR_QUIET
)

if(GIT_HASH STREQUAL "")
    set(AO_SDL_VERSION "unknown")
elseif(NOT GIT_STATUS STREQUAL "")
    set(AO_SDL_VERSION "${GIT_HASH}-dirty")
else()
    set(AO_SDL_VERSION "${GIT_HASH}")
endif()

configure_file(
    ${CMAKE_SOURCE_DIR}/include/utils/Version.h.in
    ${CMAKE_BINARY_DIR}/generated/utils/Version.h
    @ONLY
)

message(STATUS "AO-SDL version: ${AO_SDL_VERSION}")

# =============================================================================
# Embed assets/ directory into the binary
# =============================================================================
include(cmake/EmbedAssets.cmake)
embed_assets(EMBEDDED_ASSETS_SRC
    "${CMAKE_SOURCE_DIR}/assets"
    "${CMAKE_BINARY_DIR}/generated/EmbeddedAssets.cpp"
)

# =============================================================================
# aoengine — core engine library (no GL, no SDL)
#
# Public include root: engine/
#   #include "aoengine.h"          — umbrella header
#   #include "net/ProtocolHandler.h" — protocol plugin interface
#   #include "render/IRenderer.h"    — render backend interface
#   #include "ui/IUIRenderer.h"      — UI backend interface
# =============================================================================

add_library(aoengine STATIC
    engine/event/Event.cpp
    engine/event/ChatEvent.cpp
    engine/event/OutgoingChatEvent.cpp
    engine/event/UIEvent.cpp
    engine/event/ServerListEvent.cpp
    engine/event/CharacterListEvent.cpp
    engine/event/CharsCheckEvent.cpp
    engine/event/CharSelectRequestEvent.cpp
    engine/event/ServerConnectEvent.cpp
    engine/event/BackgroundEvent.cpp

    engine/utils/Log.cpp
    engine/utils/Base64.cpp
    engine/utils/JsonValidation.cpp

    engine/game/GameThread.cpp
    engine/game/ServerList.cpp
    engine/game/Session.cpp

    engine/asset/AssetLibrary.cpp
    engine/asset/formats/ApngDecoder.cpp
    engine/asset/AssetCache.cpp
    engine/asset/MediaManager.cpp
    engine/asset/MountManager.cpp
    engine/asset/MountArchive.cpp
    engine/asset/MountDirectory.cpp
    engine/asset/MountEmbedded.cpp
    ${EMBEDDED_ASSETS_SRC}
    engine/asset/stb_image_impl.cpp

    engine/net/WebSocket.cpp
    engine/net/KissnetTcpSocket.cpp
    engine/net/NetworkThread.cpp

    engine/event/OutgoingICMessageEvent.cpp
    engine/event/DisconnectEvent.cpp
    engine/ui/UIManager.cpp

    engine/render/Transform.cpp
    engine/render/TransformAnimator.cpp
    engine/render/StateBuffer.cpp
    engine/render/RenderState.cpp
    engine/render/RenderManager.cpp
    engine/render/Layer.cpp
    engine/render/AnimationPlayer.cpp
    engine/render/TextRenderer.cpp
    engine/render/GlyphCache.cpp
    engine/render/TextMeshBuilder.cpp
    engine/net/HttpPool.cpp
    engine/asset/MountHttp.cpp
    engine/asset/ImageDecoders.cpp
    engine/asset/formats/WebPDecoder.cpp
    engine/asset/formats/GifDecoder.cpp
    engine/asset/formats/StbiDecoder.cpp
    engine/asset/miniaudio_impl.cpp
    engine/asset/AudioDecoders.cpp
    engine/asset/formats/MiniaudioDecoder.cpp
    engine/asset/formats/OpusDecoder.cpp
    engine/audio/AudioThread.cpp
    engine/audio/AudioStream.cpp
)

# Platform-specific implementations (selected at build time)
if(APPLE)
    target_sources(aoengine PRIVATE
        platform/macos/SystemFonts.mm
        platform/macos/HardwareId.mm
        platform/macos/Time.cpp
    )
elseif(WIN32)
    target_sources(aoengine PRIVATE
        platform/windows/SystemFonts.cpp
        platform/windows/HardwareId.cpp
        platform/windows/Time.cpp
    )
else()
    target_sources(aoengine PRIVATE
        platform/linux/SystemFonts.cpp
        platform/linux/HardwareId.cpp
        platform/linux/Time.cpp
    )
endif()

set_property(TARGET aoengine PROPERTY CXX_STANDARD 20)

target_include_directories(aoengine
    PUBLIC  include
            ${CMAKE_BINARY_DIR}/generated
            third-party/header-libs
    PRIVATE engine
            third-party/stb
            third-party/kissnet
            third-party/bit7z
)

# HTTPS support: OpenSSL on desktop, native Apple TLS on iOS via apple_httplib shim
if(AO_BUILD_FLUTTER AND APPLE)
    # Use our NSURLSession-based httplib replacement instead of cpp-httplib+OpenSSL.
    # The shim header (apple_httplib.h renamed to httplib.h) must shadow the real one.
    # We achieve this by creating a shim directory with a symlink.
    set(HTTPLIB_SHIM_DIR "${CMAKE_BINARY_DIR}/httplib_shim")
    file(MAKE_DIRECTORY "${HTTPLIB_SHIM_DIR}")
    file(CREATE_LINK
        "${CMAKE_SOURCE_DIR}/apps/flutter/native/apple_httplib.h"
        "${HTTPLIB_SHIM_DIR}/httplib.h"
        SYMBOLIC)
    # Put the shim dir BEFORE third-party/header-libs so it shadows the real httplib.h
    target_include_directories(aoengine BEFORE PUBLIC "${HTTPLIB_SHIM_DIR}")
    # Compile the NSURLSession implementation (requires ARC for ObjC memory management)
    target_sources(aoengine PRIVATE apps/flutter/native/apple_httplib.mm)
    set_source_files_properties(apps/flutter/native/apple_httplib.mm PROPERTIES COMPILE_FLAGS "-fobjc-arc")
    target_link_libraries(aoengine PUBLIC bit7z freetype webpdemux webp opusfile)
else()
    set(OPENSSL_USE_STATIC_LIBS ON)
    find_package(OpenSSL)
    if(OPENSSL_FOUND)
        target_compile_definitions(aoengine PUBLIC CPPHTTPLIB_OPENSSL_SUPPORT)
        target_link_libraries(aoengine PUBLIC bit7z freetype webpdemux webp opusfile OpenSSL::SSL OpenSSL::Crypto)
    else()
        target_link_libraries(aoengine PUBLIC bit7z freetype webpdemux webp opusfile)
    endif()
endif()
target_include_directories(aoengine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/third-party/libwebp/src)

if(APPLE)
    target_link_libraries(aoengine PRIVATE
        "-framework CoreText"
        "-framework Foundation"
        "-framework IOKit"
    )
endif()

# =============================================================================
# Plugins
# =============================================================================

if(APPLE)
    # --- aorender_metal — Metal renderer backend (macOS / iOS) ----------------

    add_library(aorender_metal STATIC
        plugins/render/metal/MetalRenderer.mm
        plugins/render/metal/MetalTexture.mm
        plugins/render/metal/Texture.mm
    )
    set_property(TARGET aorender_metal PROPERTY CXX_STANDARD 20)

    target_include_directories(aorender_metal
        PUBLIC  plugins
        PRIVATE plugins/render/metal
    )
    target_link_libraries(aorender_metal PUBLIC aoengine
        "-framework Metal"
        "-framework MetalKit"
        "-framework QuartzCore"
        "-framework Foundation"
    )

else()
    # --- aorender_gl — OpenGL renderer backend --------------------------------

    add_library(aorender_gl STATIC
        plugins/render/gl/Texture.cpp
        plugins/render/gl/Shader.cpp
        plugins/render/gl/GLTexture.cpp
        plugins/render/gl/GLMesh.cpp
        plugins/render/gl/GLSprite.cpp
        plugins/render/gl/GLRenderer.cpp
    )
    set_property(TARGET aorender_gl PROPERTY CXX_STANDARD 20)

    target_include_directories(aorender_gl
        PUBLIC  plugins
        PRIVATE plugins/render/gl
    )
    target_link_libraries(aorender_gl PUBLIC aoengine ${OPENGL_LIBRARIES})

    if(WIN32)
        target_include_directories(aorender_gl PUBLIC third-party/glew/include)
        target_link_libraries(aorender_gl PUBLIC
            ${CMAKE_CURRENT_SOURCE_DIR}/third-party/glew/lib/Release/x64/glew32.lib)
    else()
        find_package(GLEW REQUIRED)
        target_include_directories(aorender_gl PUBLIC ${GLEW_INCLUDE_DIRS})
        target_link_libraries(aorender_gl PUBLIC ${GLEW_LIBRARIES})
    endif()
endif()

# --- ao_net — AO2 network protocol (packet parsing, serialization) -----------

add_library(ao_net STATIC
    plugins/net/ao/AOClient.cpp
    plugins/net/ao/AOPacket.cpp
    plugins/net/ao/PacketTypes.cpp
    plugins/net/ao/PacketBehavior.cpp
)
set_property(TARGET ao_net PROPERTY CXX_STANDARD 20)
target_include_directories(ao_net
    PUBLIC  plugins
    PRIVATE plugins/net/ao   # bare includes within the net plugin
)
target_link_libraries(ao_net PUBLIC aoengine)

# --- ao_game — AO2 game logic (courtroom, emotes, textbox, effects) ---------

add_library(ao_game STATIC
    plugins/ao/event/ICMessageEvent.cpp
    plugins/ao/asset/AOAssetLibrary.cpp
    plugins/ao/asset/AOCharacterSheet.cpp
    plugins/ao/game/AOBlipPlayer.cpp
    plugins/ao/game/AOCourtroomPresenter.cpp
    plugins/ao/game/AOSceneCompositor.cpp
    plugins/ao/game/AOMessagePlayer.cpp
    plugins/ao/game/AOMusicPlayer.cpp
    plugins/ao/game/ICMessageQueue.cpp
    plugins/ao/game/AOBackground.cpp
    plugins/ao/game/AOEmotePlayer.cpp
    plugins/ao/game/AOTextBox.cpp
    plugins/ao/game/AOTextProcessor.cpp
    plugins/ao/game/effects/ScreenshakeEffect.cpp
    plugins/ao/game/effects/SlideEffect.cpp
    plugins/ao/game/effects/FlashEffect.cpp
    plugins/ao/game/effects/ShaderEffect.cpp
)
set_property(TARGET ao_game PROPERTY CXX_STANDARD 20)
target_include_directories(ao_game PUBLIC plugins)
target_link_libraries(ao_game PUBLIC aoengine)

# --- ao_protocol — thin glue linking net + game + UI screens -----------------

add_library(ao_protocol STATIC
    plugins/ao/ao_plugin.cpp
    plugins/ao/ui/screens/ServerListScreen.cpp
    plugins/ao/ui/screens/CharSelectScreen.cpp
    plugins/ao/ui/screens/CourtroomScreen.cpp
)
set_property(TARGET ao_protocol PROPERTY CXX_STANDARD 20)
target_include_directories(ao_protocol PUBLIC plugins)
target_link_libraries(ao_protocol PUBLIC ao_net ao_game)

# =============================================================================
# Applications — one per backend
# =============================================================================

if(NOT AO_BUILD_FLUTTER)
    add_subdirectory(apps/sdl)
    # add_subdirectory(apps/qt)   # future: ENABLE_THE_HORRORS
endif()

# --- ao_bridge — C API for Flutter/Dart FFI (mobile) -------------------------
# Built as a static library; the Flutter runner links it in.
# Only included when AO_BUILD_FLUTTER is ON (set by the ios-flutter preset).

option(AO_BUILD_FLUTTER "Build the Flutter FFI bridge library" OFF)
if(AO_BUILD_FLUTTER)
    add_library(ao_bridge STATIC
        apps/flutter/native/bridge.cpp
        apps/flutter/native/MiniaudioDevice.cpp
        apps/flutter/native/miniaudio_device_impl.mm
    )
    # ObjC++ files need ARC for proper memory management
    set_source_files_properties(
        apps/flutter/native/miniaudio_device_impl.mm
        PROPERTIES COMPILE_FLAGS "-fobjc-arc"
    )
    set_property(TARGET ao_bridge PROPERTY CXX_STANDARD 20)
    target_include_directories(ao_bridge PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        ${CMAKE_CURRENT_SOURCE_DIR}/plugins
        ${CMAKE_CURRENT_SOURCE_DIR}/apps/flutter/native
        ${CMAKE_BINARY_DIR}/generated
    )
    target_link_libraries(ao_bridge PRIVATE ao_protocol)
    if(APPLE)
        target_link_libraries(ao_bridge PRIVATE aorender_metal
            "-framework AudioToolbox"
            "-framework CoreAudio"
            "-framework AVFoundation"
        )
    else()
        target_link_libraries(ao_bridge PRIVATE aorender_gl)
    endif()

    # flutter-build: build the native bridge and all libraries that the
    # xcconfig links against (some are not transitive deps of ao_bridge).
    add_custom_target(flutter-build
        DEPENDS ao_bridge webpdecoder sharpyuv
        COMMENT "Building native bridge for Flutter"
    )
endif()

# =============================================================================
# Tests
# =============================================================================

if(NOT AO_BUILD_FLUTTER)
    enable_testing()
    add_subdirectory(tests)
endif()

# =============================================================================
# API Documentation (Doxygen)
# =============================================================================

find_package(Doxygen QUIET)

if(DOXYGEN_FOUND)
    message(STATUS "Found Doxygen: ${DOXYGEN_EXECUTABLE}")

    add_custom_target(docs
        COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_SOURCE_DIR}/Doxyfile
        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
        COMMENT "Generating API documentation with Doxygen → docs/html/index.html"
        VERBATIM
    )
else()
    message(STATUS "Doxygen not found — the 'docs' target will not be available.")
endif()

# =============================================================================
# clang-tidy
# =============================================================================

find_program(CLANG_TIDY_EXE NAMES clang-tidy)

if(CLANG_TIDY_EXE)
    message(STATUS "Found clang-tidy: ${CLANG_TIDY_EXE}")

    add_custom_target(run-clang-tidy
        COMMAND ${CMAKE_COMMAND} -E echo "Running clang-tidy..."
        COMMAND /bin/sh -c "find ${CMAKE_SOURCE_DIR} -path '${CMAKE_SOURCE_DIR}/third-party' -prune -o -name '*.cpp' -print0 | xargs -0 ${CLANG_TIDY_EXE} -header-filter='.*[/\\](engine|plugins|apps)[/\\].*' -p ${CMAKE_BINARY_DIR}"
        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
        COMMENT "Running clang-tidy on the project sources using compile_commands.json"
        VERBATIM
    )
else()
    message(WARNING "clang-tidy not found! The 'run-clang-tidy' target will not be available.")
endif()
